src/objects/Inactive_Period__c.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inactive_Status_Reason__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inactive Status Reason</label>
        <referenceTo>Inactive_Reason__c</referenceTo>
        <relationshipLabel>Inactive Periods</relationshipLabel>
        <relationshipName>Inactive_Periods</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Participation_Number__c</fullName>
        <label>Participation Number</label>
        <referenceTo>Participant__c</referenceTo>
        <relationshipLabel>Inactive Periods</relationshipLabel>
        <relationshipName>Inactive_Periods</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Inactive Period</label>
    <nameField>
        <displayFormat>{MMDDYY}{0}</displayFormat>
        <label>Inactive Period Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inactive Periods</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>